Fixed jumping bug. Box-sizing: Border-box; ftw!

--- a/example/css/main.scss
+++ b/example/css/main.scss
@@ -31,6 +31,11 @@ html {
     line-height: 1.4;
 }
 
+* {
+-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+-moz-box-sizing: border-box;    /* Firefox, other Gecko */
+box-sizing: border-box;         /* Opera/IE 8+ */}
+
 /*
  * Remove text-shadow in selection highlight: h5bp.com/i
  * These selection rule sets have to be separate.
